fix progress bar overlap bottom option selector

--- a/less/topic.less
+++ b/less/topic.less
@@ -567,7 +567,6 @@
 			background-color: @body-bg;
 			.border-radius(@border-radius-base);
 			position: relative;
-			z-index: 1;
 		}
 
 		@media (min-width: @screen-sm-min) {
